# nfl_big_data_bowl_2025

./: final_paper.txt  final_paper_information.txt  ideas.txt  main.ipynb  main.py  pyproject.toml
archive/: main.ipynb
src/: __init__.py
src/eda/: __init__.py
src/feature_engineering/: __init__.py  column_schema.py  feature_engineering.py  feature_selection.py  games_fe.py  player_play_fe.py  players_fe.py  plays_fe.py  preprocess.py  sci_metrics.py  utils.py
src/load_data/: __init__.py  load_data.py
src/models/: gbm.py  gbm_classifier_visualizations.py  gbm_regressor.py
src/nfl_big_data_bowl_2025.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: __init__.py  gbm_utils.py  visualization.py
